# boost_practice

./: .gitignore  LICENSE  README.md
asio_practice_1/: .clang-format  CMakeLists.txt
asio_practice_1/asio_pratice_1.xcworkspace/: contents.xcworkspacedata
asio_practice_1/common/: Buffer.h
asio_practice_1/tcp_client1/tcp_client1/: boost_client_async.hpp  main.cpp
asio_practice_1/tcp_client1/tcp_client1.xcodeproj/: project.pbxproj
asio_practice_1/tcp_client1/tcp_client1.xcodeproj/xcuserdata/naver.xcuserdatad/xcschemes/: xcschememanagement.plist
asio_practice_1/tcp_client_1/: CMakeLists.txt  boost_client_async.cpp  boost_client_async.hpp  main.cpp
asio_practice_1/tcp_server_1/: CMakeLists.txt  boost_server_async.cpp  session.cpp  session.hpp
asio_practice_1/tcp_server_1/Index/DataStore/v5/units/: main.o-19X6XVUG3PXS
asio_practice_1/tcp_server_1/tcp_server_1/: boost_server_async.cpp  boost_server_async.hpp  main.cpp  session.cpp  session.hpp
asio_practice_1/tcp_server_1/tcp_server_1.xcodeproj/: project.pbxproj
asio_practice_1/tcp_server_1/tcp_server_1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
asio_practice_1/tcp_server_1/tcp_server_1.xcodeproj/xcuserdata/apple.xcuserdatad/xcschemes/: xcschememanagement.plist
asio_rpc_practice/: CMakeLists.txt
asio_rpc_practice/client/: CMakeLists.txt  main.cpp  rpc_client.cpp  rpc_client.hpp
asio_rpc_practice/common/: Buffer.h  net.hpp  test.pb.cc  test.pb.h  test.proto
asio_rpc_practice/server/: CMakeLists.txt  boost_async.cpp  boost_async.hpp  main.cpp  rpc_session.cpp  rpc_session.hpp
beast_practice-1/: CMakeLists.txt
beast_practice-1/Index/DataStore/v5/records/00/: reactive_socket_connect_op.hpp-2FU83ZJ734E00
beast_practice-1/Index/DataStore/v5/records/03/: close.ipp-38HSZ2HWM3J03
beast_practice-1/Index/DataStore/v5/records/05/: buffers_suffix.hpp-2UK8JDR7LZ505
beast_practice-1/Index/DataStore/v5/records/06/: deflate_stream.hpp-3IH94I4GJWN06
beast_practice-1/Index/DataStore/v5/records/07/: address_v4_iterator.hpp-1OXNLPMHAIN07  is_assignable.hpp-1IJZ7ZKT95V07
beast_practice-1/Index/DataStore/v5/records/08/: has_binary_operator.hpp-2VM68SSLXOQ08
beast_practice-1/Index/DataStore/v5/records/0D/: http_session.cpp-2Y08XU3N5K40D
beast_practice-1/Index/DataStore/v5/records/0E/: basic_parsed_list.hpp-1OXDM0R9BD30E
beast_practice-1/Index/DataStore/v5/records/0G/: greg_year.hpp-UM1CHYAN4G0G  reactive_socket_service_base.ipp-23QCBUIQX4X0G
beast_practice-1/Index/DataStore/v5/records/0I/: handler_tracking.hpp-3JL1VSB87IF0I
beast_practice-1/Index/DataStore/v5/records/0J/: write.ipp-3F2BXODYCDH0J
beast_practice-1/Index/DataStore/v5/records/0L/: resolver_query_base.hpp-OGOKSTVAXO0L
beast_practice-1/Index/DataStore/v5/records/0M/: has_binary_operator.hpp-URKYAOJX7C0M
beast_practice-1/Index/DataStore/v5/records/0O/: http_session.cpp-23OMTV4NYIW0O
beast_practice-1/Index/DataStore/v5/records/0Q/: reactive_socket_sendto_op.hpp-2DP0AL4JI820Q
beast_practice-1/Index/DataStore/v5/records/0R/: list_iterator.hpp-F98XAS41MT0R
beast_practice-1/Index/DataStore/v5/records/0S/: handler_alloc_helpers.hpp-T914JNASBQ0S  list_node.hpp-2JQ0DS5FURU0S
beast_practice-1/Index/DataStore/v5/records/0T/: address_v4.ipp-2IPST273Q7R0T  address_v6.hpp-2HMKL9KM8240T
beast_practice-1/Index/DataStore/v5/records/0U/: meta_utils.hpp-CB6E3IQZPU0U
beast_practice-1/Index/DataStore/v5/records/0W/: type_traits.hpp-Q6QG2AQH8R0W
beast_practice-1/Index/DataStore/v5/records/0X/: dynamic_body.hpp-2RBEVPKFDY30X  http_session.hpp-1M4DWD5O2SP0X
beast_practice-1/Index/DataStore/v5/records/0Y/: address_v6.hpp-AVCTH2LEEI0Y
beast_practice-1/Index/DataStore/v5/records/10/: handler_work.hpp-1PIGTIJJ9E210  http_session.cpp-20QZWU26LFO10
beast_practice-1/Index/DataStore/v5/records/11/: ptime.hpp-3S5CJWPC9PS11  rbtree_algorithms.hpp-SW7DWUVI6Q11
beast_practice-1/Index/DataStore/v5/records/12/: error.hpp-2IU6NFK0WVT12  http_session.hpp-RSJSCDFTTF12
beast_practice-1/Index/DataStore/v5/records/13/: http_session.cpp-3J75P00UP8P13
beast_practice-1/Index/DataStore/v5/records/14/: basic_socket_acceptor.hpp-28V6FH3BOUQ14
beast_practice-1/Index/DataStore/v5/records/15/: thread_info_base.hpp-KKCG33BWAZ15
beast_practice-1/Index/DataStore/v5/records/19/: core.hpp-1BUGE6CINBQ19
beast_practice-1/Index/DataStore/v5/records/1A/: result_of_iterate.hpp-VPR185LF611A
beast_practice-1/Index/DataStore/v5/records/1E/: http_session.cpp-JDJYNX85A71E  listener.cpp-1VJPM1GEGPZ1E
beast_practice-1/Index/DataStore/v5/records/1G/: ranges.hpp-1X5N2UFUG151G
beast_practice-1/Index/DataStore/v5/records/1J/: bind_executor.hpp-4IB0BW2OGR1J
beast_practice-1/Index/DataStore/v5/units/: http_session.o-1HNN83EIC4UUA  http_session.o-2KSORCTY7MDY6  http_session.o-2U1V4E28REMMU  http_session.o-355I4343PP4PW  listener.o-2VWG4JQDVKH11  listener.o-3CHQO0XP7L0UA  listener.o-9G6SIRZD2MWR  listener.o-U4AE643UUIW4  main.o-28UBH2F3BIEC8  main.o-3R46D2VWND4YQ  main.o-9C7NBHFVCRNB  main.o-BMKUQ3VSB5VN
beast_practice-1/beast_practice/: beast.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.h  main.cpp  net.hpp
beast_practice-1/beast_practice-1.xcodeproj/: project.pbxproj
beast_practice-1/beast_practice-1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
beast_practice-1/beast_practice-1.xcodeproj/project.xcworkspace/xcuserdata/apple.xcuserdatad/: UserInterfaceState.xcuserstate
beast_practice-1/beast_practice-1.xcodeproj/xcuserdata/apple.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
beast_practice-1/beast_practice-1.xcodeproj/xcuserdata/apple.xcuserdatad/xcschemes/: boost_practice.xcscheme  xcschememanagement.plist
proto_rpc/: CMakeLists.txt
proto_rpc/example/: CMakeLists.txt  client.cpp  server.cpp  test.proto
proto_rpc/lib/: CMakeLists.txt  rpc.proto  rpc_client.hpp  rpc_codec.cpp  rpc_codec.h  rpc_server.cpp  rpc_server.h  rpc_session.cpp  rpc_session.h
proto_rpc/lib/common/: net.hpp
proto_rpc/lib/ssl_file/: commond.txt  dh1024.pem  server.crt  server.csr  server.key
(+652 files in other folders)
